--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "element-plus": "^2.3.14",
     "pinia": "^2.1.6",
+    "bootstrap": "^5.3.2",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5"
   }
 }
